--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,9 +7,9 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "target": "ES2020",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "target": "ES2022",
     "esModuleInterop": true,
     // For nodejs:
     // "lib": ["esnext"],
@@ -41,5 +41,5 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  }
+  },"include": ["src" ,"tests"]
 }
