--- a/backend/package.json
+++ b/backend/package.json
@@ -28,10 +28,12 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "env-var": "^7.5.0",
     "express": "^5.1.0",
+    "jose": "^6.1.0",
     "openai": "^5.22.0"
   }
 }
