--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.5.1",
+    "@types/node": "^24.5.2",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
@@ -28,10 +28,13 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "env-var": "^7.5.0",
     "express": "^5.1.0",
-    "openai": "^5.22.0"
+    "openai": "^5.22.0",
+    "reflect-metadata": "^0.2.2"
   }
 }
