--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,9 +7,11 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "target": "ES2022",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "target": "ES2020",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     // For nodejs:
     // "lib": ["esnext"],
