feat: Add Supabase configuration and dependencies

--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.58.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "env-var": "^7.5.0",
