--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,15 +6,16 @@
     "outDir": "./dist",
 
     // Environment Settings
-    // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "target": "ES2022",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "target": "ES2020",
     "esModuleInterop": true,
-    // For nodejs:
-    // "lib": ["esnext"],
-     "types": ["node"],
-    // and npm install -D @types/node
+
+    // Decorators (NECESARIO para class-validator)
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+
+    "types": ["node"],
 
     // Other Outputs
     "sourceMap": true,
@@ -26,20 +27,13 @@
     "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
 
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
-
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true,
-  },"include": ["src" ,"tests"]
+    "skipLibCheck": true
+  },
+  "include": ["src", "tests"]
 }
