--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest"
-    
   },
-  "jest": { "preset": "ts-jest",
+  "jest": {
+    "preset": "ts-jest",
     "testEnvironment": "node"
   },
   "keywords": [],
@@ -36,6 +36,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.58.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
