--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
-PORT=
+PORT= #4000
+
+# Supabase
+SUPABASE_URL=https://xxxxx.supabase.co
+SUPABASE_KEY=your-key-here
+SUPABASE_JWT_SECRET=your_jwt_secret_here
+
+# OpenAI 
+OPENAI_API_KEY=your-openai-api-key-here
