--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --respawn src/index.ts",
+    "supabase:start": "supabase start",
+    "supabase:init": "supabase init",
+    "supabase:stop": "supabase stop",
+    "supabase:reset": "supabase db reset",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest"
@@ -27,8 +31,10 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
+    "cross-env": "^10.1.0",
     "eslint": "^9.36.0",
     "jest": "^30.1.3",
+    "supabase": "^2.47.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
     "ts-node-dev": "^2.0.0",
@@ -44,6 +50,7 @@
     "env-var": "^7.5.0",
     "express": "^5.1.0",
     "openai": "^5.22.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "uuid": "^13.0.0"
   }
 }
