chore: agrego tests de integracion para la ruta /api/dreams/save

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFiles": ["reflect-metadata"]
   },
   "keywords": [],
   "author": "",
