--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
@@ -49,6 +50,7 @@
     "dotenv": "^17.2.2",
     "env-var": "^7.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^5.22.0",
     "reflect-metadata": "^0.2.2",
     "uuid": "^13.0.0"
