add gemini ai image generation to dream interpretation

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ SUPABASE_JWT_SECRET=your_jwt_secret_here
 
 # OpenAI 
 OPENAI_API_KEY=your-openai-api-key-here
+
+# GeminiAI
+GEMINI_API_KEY=your-gemini-api-key-here
