--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "setupFiles": ["reflect-metadata"]
+    "setupFiles": [
+      "reflect-metadata"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -44,6 +46,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@google/genai": "^1.25.0",
     "@supabase/supabase-js": "^2.58.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
