--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
@@ -46,7 +47,7 @@
     "ts-jest": "^29.4.4",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@google/genai": "^1.25.0",
@@ -58,6 +59,7 @@
     "env-var": "^7.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "openai": "^5.22.0",
     "reflect-metadata": "^0.2.2",
     "uuid": "^13.0.0"
