--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "rootDir": "./",
     "outDir": "./dist",
 
+    //Express Multer Type
+    "typeRoots": ["./src/infrastructure/types", "./node_modules/@types"],
+
     // Environment Settings
     "module": "commonjs",
     "moduleResolution": "node",
