--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "emitDecoratorMetadata": true,
 
     "types": ["node", "jest"],
+    "typeRoots": ["./node_modules/@types", "./src/types"],
 
     // Other Outputs
     "sourceMap": true,
