add .env reference

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-PORT= #4000
+# Server Configuration
+NODE_ENV=development
+PORT=4000
+SESSION_SECRET=your_session_secret_here
 
 # Supabase
 SUPABASE_URL=https://xxxxx.supabase.co
