--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@jest/globals": "^30.1.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
@@ -58,6 +59,7 @@
     "dotenv": "^17.2.2",
     "env-var": "^7.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "openai": "^5.22.0",
