--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ OPENAI_API_KEY=your-openai-api-key-here
 
 # GeminiAI
 GEMINI_API_KEY=your-gemini-api-key-here
+
+# MercadoPago
+MERCADO_PAGO_ACCESS_TOKEN=your-mercado-pago-access-token-here
